fixed horiz scroll on mobile

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -90,7 +90,7 @@
     }
 
     .about-word-wrap {
-        width: 100vw;
+        width: 97vw;
         margin: 0 auto;
         padding: 0;
     }
